appId: com.budgetize.app
---
# - launchApp:
#     clearState: true
- tapOn: Next, 
- tapOn: Next, 
- tapOn: Next, 
- tapOn: Start Fresh
